# flightsim

./: .gitignore  CMakeLists.txt  README.md
assets/models/environment/: moon_surface.glb  planet_earth.glb  planet_gas.glb  planet_ice.glb  planet_rock.glb  star.glb  trade_station.glb  tunnel_section_a.glb
assets/models/props/: powerup_neutrino.glb
assets/models/ships/: pirate_ship.glb  player_ship.glb
assets/shaders/: skybox.fs  skybox.vs
cmake/: FetchDependencies.cmake
docs/: ARTIST_BRIEF.md  AUDIO_BRIEF.md  MMO_PLAN.md
scripts/: deploy_deck.sh  export_blender.py  gen_placeholder_assets.py  package_steamdeck.sh
src/: main.cpp
src/ai/: EnemyAI.cpp  EnemyAI.h
src/audio/: AudioManager.cpp  AudioManager.h
src/core/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h
src/entities/: EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  PlayerShip.cpp  PlayerShip.h  Powerup.cpp  Powerup.h  Projectile.cpp  Projectile.h  TradeStation.cpp  TradeStation.h
src/physics/: CollisionSystem.cpp  CollisionSystem.h  FlightPhysics.cpp  FlightPhysics.h
src/rendering/: HUD.cpp  HUD.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  SolarSystem.h
src/systems/: PowerupSystem.cpp  PowerupSystem.h  ReactorSystem.cpp  ReactorSystem.h  TradingSystem.cpp  TradingSystem.h  WeaponSystem.cpp  WeaponSystem.h
src/world/: MoonEnvironment.cpp  MoonEnvironment.h  SolarSystem.cpp  SolarSystem.h  World.cpp  World.h
